fixed prep now label, fixed animation, began work on quick list properties

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
   </head>
   <body>
     <div class="daily-prep-list">
+      <label for="daily-prep-list" class="daily-prep-list__button--label"
+          >Prep Now</label
+        >
       <input
         type="checkbox"
         class="daily-prep-list__checkbox"
         id="daily-toggle"
       />
       <label for="daily-toggle" class="daily-prep-list__button">
-        <label for="daily-prep-list" class="daily-prep-list__button--label">Prep Now</label
-        >
+        <!--  -->
         <span class="daily-prep-list__icon"></span>
       </label>
       <div class="daily-prep-list__background">&nbsp;</div>
@@ -59,6 +61,24 @@
         </ul>
       </nav>
     </div>
+    <div class="icon">
+      <img
+        src="/referenceLibrary/images/broccoliSilou.png"
+        alt=""
+        class="icon__broccoli"
+      />
+      <img
+        src="/referenceLibrary/images/knife.png"
+        alt=""
+        class="icon__knife"
+      />
+      <img
+        src="/referenceLibrary/images/onion.png"
+        alt=""
+        class="icon__onion"
+      />
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img
@@ -67,27 +87,7 @@
           class="header__logo"
         />
       </div>
-      <div class="icon">
-        <img
-          src="/referenceLibrary/images/broccoliSilou.png"
-          alt=""
-          class="icon__broccoli"
-        />
-      </div>
-      <div class="icon">
-        <img
-          src="/referenceLibrary/images/knife.png"
-          alt=""
-          class="icon__knife"
-        />
-      </div>
-      <div class="icon">
-        <img
-          src="/referenceLibrary/images/onion.png"
-          alt=""
-          class="icon__onion"
-        />
-      </div>
+
       <div class="header__text--box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Kitchen Prep App</span>
