fixed quick list buttons, fixed section start

--- a/index.html
+++ b/index.html
@@ -97,25 +97,13 @@
     </header>
 
     <section class="section-start">
-      <div class="section-start__links">
         <nav class="section-start__nav">
-          <ul class="section-start__list">
-            <li class="section-start__list--item">
               <a href="#" class="section-start--link">Recipe Book</a>
-            </li>
-            <li class="section-start__list--item">
               <a href="#" class="section-start--link">Conversions</a>
-            </li>
-            <li class="section-start__list--item">
               <a href="#" class="section-start--link">Food Safety</a>
-            </li>
-            <li class="section-start__list--item">
               <a href="#" class="section-start--link">Quick Notes</a>
-            </li>
-          </ul>
         </nav>
-      </div>
-      <div class="u-center-text">
+      <div class="section-start__heading u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
           These are the quick list properties
         </h2>
