--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
     </section>
 
 
-    
+<footer class="footer">
+  <div class="footer__logo">
+    FOOTER LOGO
+  </div>
+</footer>
+
+
     <script src="/app.js"></script>
   </body>
 </html>
