added the grid section, added grid measure

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
         <a href="#" class="section-start--link">Conversions</a>
         <a href="#" class="section-start--link">Food Safety</a>
         <a href="#" class="section-start--link">Quick Notes</a>
+        <a href="#" class="section-start--link">Food Cost</a>
+        <a href="#" class="section-start--link">Labor Cost</a>
       </nav>
       <div class="section-start__heading u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
@@ -116,8 +118,8 @@
     FOOTER LOGO
   </div>
 </footer>
-
-
+<!-- this is the grid section -->
+        <!-- <section class="grid-test"> -->
     <script src="/app.js"></script>
   </body>
 </html>
