fixed modal functionality, fixed buttons need to populate modals' functionality

--- a/index.html
+++ b/index.html
@@ -93,56 +93,117 @@
         <a href="#" class="section-start--link">Food Safety</a>
         <a href="#" class="section-start--link">Quick Notes</a> -->
         <a
-          data-modal-target="#modal"
+          data-modal-target="#foodCost"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           Food Cost
         </a>
+
+        <div class="modal" id="foodCost">
+          <div class="modal__header">
+            <div class="modal__title">Food cost Calculator</div>
+            <button data-close-button class="modal__close-button">
+              &times;
+            </button>
+          </div>
+          <div class="modal__body">
+            This is where I will put the functionality for the food cost
+            calculator. I will put labels, buttons, and forms to do the math for
+            food cost analysis. The more text That I put in here the larger that
+            my modal will become. This is of great benefit because, I can
+            practice my typing as well.
+          </div>
+        </div>
+
         <a
-          data-modal-target="#modal"
+          data-modal-target="#laborCost"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           labor cost
         </a>
+
+        <div class="modal" id="laborCost">
+          <div class="modal__header">
+            <div class="modal__title">Labor cost Calculator</div>
+            <button data-close-button class="modal__close-button">
+              &times;
+            </button>
+          </div>
+          <div class="modal__body">
+            This is where I will put the functionality for the labor cost
+            calculator. This will increase productivity. This variable will be
+            used to factor some food cost attributes.
+          </div>
+        </div>
+
         <a
-          data-modal-target="#modal"
+          data-modal-target="#foodSafety"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           Food Safety
         </a>
+
+        <div class="modal" id="foodSafety">
+          <div class="modal__header">
+            <div class="modal__title">Food safety reference</div>
+            <button data-close-button class="modal__close-button">
+              &times;
+            </button>
+          </div>
+          <div class="modal__body">
+            This will be a reference to your company's specific safety measures
+            as awell as temp logs and other useful food safety procedures. This
+            will also include an api to the fda food regulations guidelines.
+          </div>
+        </div>
+
         <a
-          data-modal-target="#modal"
+          data-modal-target="#recipes"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           Recipes
         </a>
+
+        <div class="modal" id="recipes">
+          <div class="modal__header">
+            <div class="modal__title">Recipes</div>
+            <button data-close-button class="modal__close-button">
+              &times;
+            </button>
+          </div>
+          <div class="modal__body">
+            This area will contain your company(or personal) recipes. this will also include a scale up or down tool for events or parties.
+          </div>
+        </div>
+
         <a
-          data-modal-target="#modal"
+          data-modal-target="#conversions"
           href="#"
           class="section-start-button btn btn--glass btn--animated"
         >
           conversions
         </a>
+
+        <div class="modal" id="conversions">
+          <div class="modal__header">
+            <div class="modal__title">Conversions</div>
+            <button data-close-button class="modal__close-button">
+              &times;
+            </button>
+          </div>
+          <div class="modal__body">
+            This is where I will put a american to metric or vice versa
+            conversion calculator, I will also implement a bakers percentage aas
+            well as other useful conversions.
+          </div>
+        </div>
+
         <!-- <a href="#" class="section-start--link">Labor Cost</a> -->
       </nav>
-
-      <div class="modal" id="modal">
-        <div class="modal__header">
-          <div class="modal__title">Food cost Calculator</div>
-          <button data-close-button class="modal__close-button">&times;</button>
-        </div>
-        <div class="modal__body">
-          This is where I will put the functionality for the food cost
-          calculator. I will put labels, buttons, and forms to do the math for
-          food cost analysis. The more text That I put in here the larger that
-          my modal will become. This is of great benefit because, I can practice
-          my typing as well.
-        </div>
-      </div>
 
       <div class="overlay" id="overlay"></div>
 
