adjusting food cost calculator

--- a/index.html
+++ b/index.html
@@ -127,32 +127,38 @@
           </div>
           <div class="modal__body">
             Enter the inventory start and finish amounts, as well as, sales, and
-            other expenses. The labour can be entered ar taken from the labor
+            other expenses. The labor can be entered or taken from the labor
             cost tool.
           </div>
           <div class="foodCost__calculator">
-            <input type="number" class="foodCost__input" id="inventoryStart" />
-            <label for="inventoryStart" class="foodCost__inputLabel"
-              >Enter starting inventory total amount here</label
-            >
-            <input type="number" class="foodCost__input" id="inventoryEnd" />
-            <label for="inventoryEnd" class="foodCost__inputLabel"
-              >Enter the ending inventory total amount here</label
-            >
+            
+              <label for="inventoryStart" class="foodCost__inputLabel"
+                >Enter starting inventory total amount here</label
+              >
 
-            <input type="number" class="foodCost__input" id="totalSales" />
-            <label for="totalSales" class="foodCost__inputLabel"
-              >Enter total sales amount here</label
-            >
+              <input
+                type="number"
+                class="foodCost__input"
+                id="inventoryStart"
+              />
 
-            <input type="number" class="foodCost__input" id="otherExpenses" />
-            <label for="otherExpenses" class="foodCost__inputLabel"
-              >Enter other expenses total amount here</label
-            >
+              <label for="inventoryEnd" class="foodCost__inputLabel"
+                >Enter the ending inventory total amount here</label
+              >
+              <input type="number" class="foodCost__input" id="inventoryEnd" />
+
+              <label for="totalSales" class="foodCost__inputLabel"
+                >Enter total sales amount here</label
+              >
+              <input type="number" class="foodCost__input" id="totalSales" />
+
+              <label for="otherExpenses" class="foodCost__inputLabel"
+                >Enter other expenses total amount here</label
+              >
+              <input type="number" class="foodCost__input" id="otherExpenses" />
+            </div>
           </div>
-        </div>
-
-
+        
         <a
           data-modal-target="#laborCost"
           href="#"
