adjusting food cost calculator

--- a/index.html
+++ b/index.html
@@ -142,31 +142,27 @@
             closing inventory / food sales.
           </div>
           <div class="foodCost__calculator">
-            <div class="foodCostInputs">
-              <label for="inventoryStart" class="foodCost__inputLabel"
-                >Starting inventory total</label
-              >
-            </div>
-
+            <!-- <div class="foodCostInputs">
+              
+            </div> -->
+            <span class="foodCost__inputLabel">Starting inventory total</span>
             <input type="number" class="foodCost__input" id="inventoryStart" />
 
-            <label for="inventoryEnd" class="foodCost__inputLabel"
-              >Ending inventory total</label
+            <span for="inventoryEnd" class="foodCost__inputLabel"
+              >Ending inventory total</span
             >
             <input type="number" class="foodCost__input" id="inventoryEnd" />
 
-            <label for="purchases" class="foodCost__inputLabel"
-              >Total food/provisions purchased
-            </label>
+            <span class="foodCost__inputLabel"
+              >Total provisions purchased
+            </span>
             <input type="number" class="foodCost__input" id="purchases" />
 
-            <label for="totalSales" class="foodCost__inputLabel"
-              >Total food sales</label
-            >
+            <span class="foodCost__inputLabel">Total food sales</span>
             <input type="number" class="foodCost__input" id="totalSales" />
 
-            <label for="foodCostPercent" class="foodCost__inputLabel"
-              >Food cost percent for this item/group</label
+            <span class="foodCost__inputLabel"
+              >Food cost percent for this item</span
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div>
