--- a/index.html
+++ b/index.html
@@ -136,10 +136,7 @@
             </button>
           </div>
           <div class="modal__body">
-            Enter the inventory start and finish amounts, as well as, sales, and
-            other expenses. The labor can be entered or taken from the labor
-            cost tool. the formula used is : opening inventory + purchases -
-            closing inventory / food sales.
+            Inventory and Food Cost, as well as per plate cost.
           </div>
           <button class="foodCost__submit btn btn--glass btn--animated">
             Submit
@@ -149,7 +146,7 @@
             <!-- <div class="foodCostInputs">
               
             </div> -->
- <div class="operation operation--transfer">
+            <!-- <div class="operation operation--transfer">
         <h2>Transfer money</h2>
         <form class="form form--transfer">
           <input type="text" class="form__input form__input--to" />
@@ -158,7 +155,7 @@
           <label class="form__label">Transfer to</label>
           <label class="form__label">Amount</label>
         </form>
-      </div>
+      </div> -->
             <span class="foodCost__inputLabel">Starting inventory total</span>
             <input type="number" class="foodCost__input" id="inventoryStart" />
 
