made changes to the food cost calculator

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <row class="task-list__container">
                 <div class="col-1-of-2">
                   <input type="text" name="prep" id="preps" />
-                  <label for="prep" class="input__label"> </label>
+                  <label for="prep" class="input__label">THIS PREP </label>
                 </div>
               </row>
             </div>
@@ -175,7 +175,7 @@
             <span class="foodCost__inputLabel"
               >Food cost percent for this item</span
             >
-            <input type="number" class="foodCost__input" id="foodCostPercent" />
+            <label class="foodCost__output" id="foodCostPercent"> This Number </label>
           </div>
         </div>
 
