--- a/index.html
+++ b/index.html
@@ -37,20 +37,14 @@
       <nav class="daily-prep-list__nav">
         <ul class="daily-prep-list__list">
           <li class="daily-prep-list__item">
-            <a
-              data-modal-target="#quickList"
-              href="#"
-              class="daily-prep-list__link"
-            >
+            <a href="#" class="daily-prep-list__link btn--show-modal">
               Quick List
             </a>
 
             <div class="modal hidden" id="quickList">
               <div class="modal__header">
                 <div class="modal__title">Quick List</div>
-                <button data-close-button class="modal__close-button">
-                  &times;
-                </button>
+                <button class="modal__close-button">&times;</button>
               </div>
               <div class="modal__body">
                 This is where the first quick list will be.
@@ -60,6 +54,8 @@
                   Enter your quick preps here 911
                 </h2>
               </div>
+
+              <form class="prep__list--form">Prep List</form>
 
               <row class="task-list__container">
                 <div class="col-1-of-2">
@@ -123,9 +119,8 @@
     <section class="section-start">
       <nav class="section-start__nav">
         <button
-          data-modal-target="#foodCost"
           href="#"
-          class="btn btn--show-modal btn--glass btn--animated btn--text section-start-button"
+          class="btn--show-modal btn--glass btn--animated btn--text section-start-button btn"
         >
           Food Cost
         </button>
@@ -133,9 +128,7 @@
         <div class="modal hidden">
           <div class="modal__header">
             <div class="modal__title">Food cost Calculator</div>
-            <button data-close-button class="modal__close-button">
-              &times;
-            </button>
+            <button class="modal__close-button">&times;</button>
           </div>
           <div class="modal__body">
             Inventory and Food Cost, as well as per plate cost.
@@ -186,7 +179,7 @@
           </div>
         </div>
 
-         <button
+        <button
           data-modal-target="#foodCost"
           href="#"
           class="btn btn--show-modal btn--glass btn--animated"
