--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="/referenceLibrary/logos/kitchenPrepAppFavicon.ico" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
 
