--- a/index.html
+++ b/index.html
@@ -37,14 +37,20 @@
       <nav class="daily-prep-list__nav">
         <ul class="daily-prep-list__list">
           <li class="daily-prep-list__item">
-            <a href="#" class="daily-prep-list__link open-modal">
+            <a
+              href="#"
+              data-modal-target="#quickList"
+              class="daily-prep-list__link open-modal"
+            >
               Quick List
             </a>
 
             <div class="modal hidden" id="quickList">
               <div class="modal__header">
                 <div class="modal__title">Quick List</div>
-                <button class="close-modal">&times;</button>
+                <button data-close-modal-target="quickList" class="close-modal">
+                  &times;
+                </button>
               </div>
               <div class="modal__body">
                 This is where the first quick list will be.
@@ -120,15 +126,18 @@
       <nav class="section-start__nav">
         <button
           href="#"
+          data-modal-target="#foodCost"
           class="open-modal btn--glass btn--animated btn--text section-start-button btn"
         >
           Food Cost
         </button>
 
-        <div class="modal hidden">
+        <div class="modal hidden" id="foodCost">
           <div class="modal__header">
             <div class="modal__title">Food cost Calculator</div>
-            <button class="close-modal">&times;</button>
+            <button data-close-modal-target="#foodCost" class="close-modal">
+              &times;
+            </button>
           </div>
           <div class="modal__body">
             Inventory and Food Cost, as well as per plate cost.
@@ -180,7 +189,7 @@
         </div>
 
         <button
-          data-modal-target="#foodCost"
+          data-modal-target="#laborCost"
           href="#"
           class="btn open-modal btn--glass btn--animated"
         >
@@ -190,7 +199,7 @@
         <div class="modal hidden">
           <div class="modal__header">
             <div class="modal__title">Labor cost Calculator</div>
-            <button data-close-button class="close-modal">
+            <button data-close-modal-target="laborCost" class="close-modal">
               &times;
             </button>
           </div>
@@ -201,20 +210,18 @@
           </div>
         </div>
 
-        <a
+        <button
           data-modal-target="#foodSafety"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           Food Safety
-        </a>
+        </button>
 
         <div class="modal hidden">
           <div class="modal__header">
             <div class="modal__title">Food safety reference</div>
-            <button data-close-button class="close-modal">
-              &times;
-            </button>
+            <button data-close-button class="close-modal">&times;</button>
           </div>
           <div class="modal__body">
             This will be a reference to your company's specific safety measures
@@ -223,13 +230,13 @@
           </div>
         </div>
 
-        <a
+        <button
           data-modal-target="#recipes"
           href="#"
           class="section-start-button btn btn--animated btn--glass"
         >
           Recipes
-        </a>
+        </button>
 
         <div class="modal hidden" id="recipes">
           <div class="modal__header">
@@ -242,18 +249,18 @@
           </div>
         </div>
 
-        <a
+        <button
           data-modal-target="#conversions"
           href="#"
           class="section-start-button btn btn--glass btn--animated"
         >
           conversions
-        </a>
+        </button>
 
         <div class="modal hidden" id="conversions">
           <div class="modal__header">
             <div class="modal__title">Conversions</div>
-            <button data-close-button class="close-modal">&times;</button>
+            <button data-close-modal-target class="close-modal">&times;</button>
           </div>
           <div class="modal__body">
             This is where I will put a american to metric or vice versa
