modal functionality is set!

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           Labor Cost
         </button>
 
-        <div class="modal hidden">
+        <div class="modal hidden" id="laborCost">
           <div class="modal__header">
             <div class="modal__title">Labor cost Calculator</div>
             <button data-close-modal-target="laborCost" class="close-modal">
@@ -218,10 +218,10 @@
           Food Safety
         </button>
 
-        <div class="modal hidden">
+        <div class="modal hidden" id="foodSafety">
           <div class="modal__header">
             <div class="modal__title">Food safety reference</div>
-            <button data-close-button class="close-modal">&times;</button>
+            <button data-close-modal-target="foodSafety" class="close-modal">&times;</button>
           </div>
           <div class="modal__body">
             This will be a reference to your company's specific safety measures
@@ -241,7 +241,7 @@
         <div class="modal hidden" id="recipes">
           <div class="modal__header">
             <div class="modal__title">Recipes</div>
-            <button data-close-button class="close-modal">&times;</button>
+            <button data-close-modal-target="recipes" class="close-modal">&times;</button>
           </div>
           <div class="modal__body">
             This area will contain your company(or personal) recipes. this will
@@ -260,7 +260,7 @@
         <div class="modal hidden" id="conversions">
           <div class="modal__header">
             <div class="modal__title">Conversions</div>
-            <button data-close-modal-target class="close-modal">&times;</button>
+            <button data-close-modal-target="conversions" class="close-modal">&times;</button>
           </div>
           <div class="modal__body">
             This is where I will put a american to metric or vice versa
